css/g-r html cleanup

--- a/files/es/web/css/general_sibling_combinator/index.html
+++ b/files/es/web/css/general_sibling_combinator/index.html
@@ -9,7 +9,7 @@ tags:
 translation_of: Web/CSS/General_sibling_combinator
 original_slug: Web/CSS/Selectores_hermanos_generales
 ---
-<div><span class="s1">{{CSSRef("Selectors")}}</span></div>
+<div><span class="">{{CSSRef("Selectors")}}</span></div>
 
 <h2 id="Summary" name="Summary">Resumen</h2>
 
