--- a/files/es/web/css/index.html
+++ b/files/es/web/css/index.html
@@ -17,7 +17,7 @@ translation_of: Web/CSS
 <p>Desde CSS3, el alcance de las especificaciones se incrementó de forma significativa y el progreso de los diferentes modulos de CSS comenzó a mostrar varias diferencias, lo que hizo más efectivo <a href="/es/docs/https://www.w3.org/Style/CSS/current-work">desarrollar y publicar recomendaciones separadas por módulos</a>. En vez de versionar las especificaciones de CSS, la W3C actualmente realiza una captura de las <a href="https://www.w3.org/TR/css//es/docs/">ultimas espcificaciones estables de CSS</a>.</p>
 
 <section id="sect1">
-<ul class="card-grid">
+<ul class="">
  <li><span>Introducción a CSS</span>
 
   <p>Si eres nuevo en el desarrollo web, asegúrate de leer nuestro artículo de <a href="/es/docs/Learn/Getting_started_with_the_web/CSS_basics">conceptos básicos de CSS</a> para saber qué es CSS y cómo usarlo.</p>
@@ -32,7 +32,7 @@ translation_of: Web/CSS
 
 <div class="row topicpage-table">
 <div class="section">
-<h2 class="Documentation" id="Tutoriales">Tutoriales</h2>
+<h2 class="" id="Tutoriales">Tutoriales</h2>
 
 <p>Nuestra <a href="/es/docs/Learn/CSS">área de aprendizaje CSS</a> presenta múltiples módulos que enseñan CSS desde cero — no se requieren conocimientos previos.</p>
 
@@ -43,11 +43,8 @@ translation_of: Web/CSS
 
 <dl>
  <dt><a href="/es/docs/Learn/CSS/Building_blocks">Bloques de construcción CSS.</a></dt>
- <dd><span class="tlid-translation translation" lang="es"><span title="">Este módulo continúa a partir de donde dejó el módulo de <a href="/es/docs/Learn/CSS/Introduction_to_CSS">primeros pasos de CSS</a>. Ahora que has adquirido familiaridad con el lenguaje y su sintaxis, y has ganado cierta experiencia básica con su uso, es hora de profundizar un poco más.</span> <span title="">Este módulo analiza la cascada y la herencia, todos los tipos de selectores que tenemos disponibles, unidades, tamaño, estilo de fondos y bordes, depuración (<em>debugging</em>) y mucho más. </span></span></dd>
- <dd><span class="tlid-translation translation" lang="es"><span title="">El propósito de este módulo es proporcionarte un set de herramientas para escribir CSS competente y ayudarte a entender todas la teoría esencial antes de avanzar hacia cuestiones más específicas como <a href="/es/docs/Learn/CSS/Styling_text">estilo de textos</a> y <a href="/es/docs/Learn/CSS/CSS_layout">diseño CSS</a>. </span></span></dd>
-</dl>
-
-<dl>
+ <dd><span class="tlid-translation translation" lang="es"><span title="">Este módulo continúa a partir de donde dejó el módulo de <a href="/es/docs/Learn/CSS/Introduction_to_CSS">primeros pasos de CSS</a>. Ahora que has adquirido familiaridad con el lenguaje y su sintaxis, y has ganado cierta experiencia básica con su uso, es hora de profundizar un poco más.</span> <span title="">Este módulo analiza la cascada y la herencia, todos los tipos de selectores que tenemos disponibles, unidades, tamaño, estilo de fondos y bordes, depuración (<em>debugging</em>) y mucho más. </span></span><br><br>
+ <span class="tlid-translation translation" lang="es"><span title="">El propósito de este módulo es proporcionarte un set de herramientas para escribir CSS competente y ayudarte a entender todas la teoría esencial antes de avanzar hacia cuestiones más específicas como <a href="/es/docs/Learn/CSS/Styling_text">estilo de textos</a> y <a href="/es/docs/Learn/CSS/CSS_layout">diseño CSS</a>. </span></span></dd>
  <dt><a href="/es/docs/Learn/CSS/Styling_text">Estilo de texto</a></dt>
  <dd><span class="tlid-translation translation" lang="es"><span title="">Con los conceptos básicos del lenguaje CSS cubiertos, el siguiente tema de CSS en el que debes concentrarte es dar estilo al texto, una de las cosas más comunes que harás con CSS.</span> <span title="">Aquí veremos los fundamentos del estilo del texto, incluida la configuración de la fuente, negrita, cursiva, espaciado entre líneas y letras, sombras y otras características del texto.</span> <span title="">Terminaremos el módulo analizando la aplicación de fuentes personalizadas a tu página y en el estilo de listas y enlaces.</span></span></dd>
  <dt><a href="/es/docs/Learn/CSS/CSS_layout">Diseño de CSS</a></dt>
@@ -58,7 +55,7 @@ translation_of: Web/CSS
 </div>
 
 <div class="section">
-<h2 class="Tools" id="Referencia">Referencia</h2>
+<h2 class="" id="Referencia">Referencia</h2>
 
 <ul>
  <li><a href="/en-US/docs/Web/CSS/Reference">Referencia CSS:</a> Esta referencia exhaustiva para desarrolladores web experimentados describe cada propiedad y concepto de CSS.</li>
@@ -80,11 +77,11 @@ translation_of: Web/CSS
  </li>
 </ul>
 
-<h2 class="Tools" id="Cookbook">Cookbook</h2>
+<h2 class="" id="Cookbook">Cookbook</h2>
 
 <p><span class="tlid-translation translation" lang="es"><span title="">El <a href="/es/docs/Web/CSS/Layout_cookbook">libro de cocina de diseño CSS </a><a href="/es/docs/Web/CSS/Layout_cookbook"> </a>tiene como objetivo reunir recetas para patrones de diseño comunes, sobre cosas que puedes necesitar implementar en tus sitios.</span> <span title="">Además de proporcionar código que puedes usar como punto de partida en tus proyectos, estas recetas destacan las diferentes formas en que se pueden usar las especificaciones de diseño y las elecciones que puedes hacer como desarrollador.</span></span></p>
 
-<h2 class="Tools" id="Herramientas_para_el_desarrollo_de_CSS">Herramientas para el desarrollo de CSS</h2>
+<h2 class="" id="Herramientas_para_el_desarrollo_de_CSS">Herramientas para el desarrollo de CSS</h2>
 
 <ul>
  <li>Puede usar el <a href="https://jigsaw.w3.org/css-validator/">Servicio de Validación CSS de W3C</a> para verificar si su CSS es válido. Esta es una herramienta de depuración de valor incalculable.</li>
