--- a/files/es/web/css/list-style/index.html
+++ b/files/es/web/css/list-style/index.html
@@ -29,11 +29,9 @@ translation_of: Web/CSS/list-style
 
 <h3 id="Valores" name="Valores">Valores</h3>
 
-<dl>
- <dt>ver {{ Cssxref("list-style-type", "list-style-type") }}.</dt>
- <dt>ver {{ Cssxref("list-style-image", "list-style-image") }}.</dt>
- <dt>ver {{ Cssxref("list-style-position", "list-style-position") }}.</dt>
-</dl>
+ver {{ Cssxref("list-style-type", "list-style-type") }}.
+ver {{ Cssxref("list-style-image", "list-style-image") }}.
+ver {{ Cssxref("list-style-position", "list-style-position") }}.
 
 <h2 id="Ejemplos">Ejemplos</h2>
 
