--- a/files/es/web/css/media_queries/using_media_queries/index.html
+++ b/files/es/web/css/media_queries/using_media_queries/index.html
@@ -423,7 +423,7 @@ media_feature: width | min-width | max-width
 
 <p>Da el numero de pixeles del dispositivo por pixeles de CSS.</p>
 
-<div class="geckoVersionNote style-wrap">
+<div class="">
 <p><strong>No use esta función. </strong></p>
 
 <p>En cambio use la función <code>resolution</code> con la unidad <code>dppx</code>.<br>
