--- a/files/es/web/css/overflow-y/index.html
+++ b/files/es/web/css/overflow-y/index.html
@@ -17,7 +17,7 @@ translation_of: Web/CSS/overflow-y
 
 <p>{{EmbedInteractiveExample("pages/css/overflow-y.html")}}</p>
 
-<div class="hidden">
+<div class="">
 <p>El código para este ejemplo interactivo está almacenado en un repositorio de GitHub. Si quieres contribuir con el proyecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples</a> y envíanos un pull request.</p>
 </div>
 
