--- a/files/es/web/css/grid-template-rows/index.html
+++ b/files/es/web/css/grid-template-rows/index.html
@@ -69,8 +69,7 @@ grid-template-rows: unset;
  <dt>{{cssxref("minmax", "minmax(min, max)")}}</dt>
  <dd>Es una notación funcional que define un rango de tamaño, mayor o igual que <em>min</em>, y menor o igual que <em>max</em>. Si <em>max</em> es menor a <em>min</em>, entonces <em>max</em> es ignorado y la función es tratada como <em>min</em>. Como un máximo, un valor <code>&lt;flex&gt;</code> ajusta el factor de flexibilad de la vía. Es inválido utilizarlo como un mínimo.</dd>
  <dt><code>auto</code></dt>
- <dd>Es una palabra clave que es idéntica al contenido máximo si es un máximo. Como un mínimo representa el mínimo más grande (según lo especificado por {{cssxref("min-width")}}/{{cssxref("min-height")}}) de los elementos de la cuadrícula ocupando la vía.</dd>
- <dd>
+ <dd>Es una palabra clave que es idéntica al contenido máximo si es un máximo. Como un mínimo representa el mínimo más grande (según lo especificado por {{cssxref("min-width")}}/{{cssxref("min-height")}}) de los elementos de la cuadrícula ocupando la vía.<br><br>
  <p class="note">Nota: Los tamaños de vía <code>auto</code>  (y sólo los tamaños de vía <code>auto</code> ) pueden ser estirados por las propiedades {{cssxref("align-content")}} and {{cssxref("justify-content")}}.</p>
  </dd>
  <dt>{{cssxref("fit-content", "fit-content( [ &lt;length&gt; | &lt;percentage&gt; ] )")}}</dt>
@@ -116,7 +115,7 @@ grid-template-rows: unset;
 
 <h3 id="Result">Result</h3>
 
-<div class="hidden">
+<div class="">
 <p>{{EmbedLiveSample("Examples", "40px", "100px")}}</p>
 </div>
 
