--- a/files/es/web/css/perspective/index.html
+++ b/files/es/web/css/perspective/index.html
@@ -58,58 +58,58 @@ perspective: inherited
   <tr>
    <td>
     <div class="container" style="width: 200px; height: 200px; margin: 75px 0 0 75px; border: none;">
-    <div class="cube" style="width: 100%; height: 100%; -moz-perspective: 250px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 250px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 250px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
-    <div class="middle" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
+    <div class="" style="width: 100%; height: 100%; -moz-perspective: 250px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 250px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 250px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
+    <div class="" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
 
-    <div class="front" style="">1</div>
+    <div class="" style="">1</div>
 
-    <div class="back" style="">2</div>
+    <div class="" style="">2</div>
 
-    <div class="right" style="">3</div>
+    <div class="" style="">3</div>
 
-    <div class="left" style="">4</div>
+    <div class="" style="">4</div>
 
-    <div class="top" style="">5</div>
+    <div class="" style="">5</div>
 
-    <div class="bottom" style="">6</div>
+    <div class="" style="">6</div>
     </div>
     </div>
    </td>
    <td>
     <div class="container" style="width: 200px; height: 200px; margin: 75px 0 0 75px; border: none;">
-    <div class="cube" style="width: 100%; height: 100%; -moz-perspective: 350px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 350px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 350px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
-    <div class="middle" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
+    <div class="" style="width: 100%; height: 100%; -moz-perspective: 350px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 350px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 350px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
+    <div class="" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
 
-    <div class="front" style="">1</div>
+    <div class="" style="">1</div>
 
-    <div class="back" style="">2</div>
+    <div class="" style="">2</div>
 
-    <div class="right" style="">3</div>
+    <div class="" style="">3</div>
 
-    <div class="left" style="">4</div>
+    <div class="" style="">4</div>
 
-    <div class="top" style="">5</div>
+    <div class="" style="">5</div>
 
-    <div class="bottom" style="">6</div>
+    <div class="" style="">6</div>
     </div>
     </div>
    </td>
    <td>
     <div class="container" style="width: 200px; height: 200px; margin: 75px 0 0 75px; border: none;">
-    <div class="cube" style="width: 100%; height: 100%; -moz-perspective: 500px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 500px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 500px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
-    <div class="middle" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
+    <div class="" style="width: 100%; height: 100%; -moz-perspective: 500px; -moz-transform-style: preserve-3d; -moz-perspective-origin: 150% 150%; -webkit-perspective: 500px; -webkit-transform-style: preserve-3d; -webkit-perspective-origin: 150% 150%; perspective: 500px; transform-style: preserve-3d; perspective-origin: 150% 150%;">
+    <div class="" style="display: block; position: absolute; width: 100px; height: 100px; border: 1px dashed black; line-height: 100px; font-family: arial, sans-serif; font-size: 60px; color: white; text-align: center; background: transparent;">   </div>
 
-    <div class="front" style="">1</div>
+    <div class="" style="">1</div>
 
-    <div class="back" style="">2</div>
+    <div class="" style="">2</div>
 
-    <div class="right" style="">3</div>
+    <div class="" style="">3</div>
 
-    <div class="left" style="">4</div>
+    <div class="" style="">4</div>
 
-    <div class="top" style="">5</div>
+    <div class="" style="">5</div>
 
-    <div class="bottom" style="">6</div>
+    <div class="" style="">6</div>
     </div>
     </div>
    </td>
