css-orphaned-conflicting html cleanup

--- a/files/es/conflicting/learn/javascript/objects/classes_in_javascript/index.html
+++ b/files/es/conflicting/learn/javascript/objects/classes_in_javascript/index.html
@@ -28,7 +28,7 @@ original_slug: Learn/JavaScript/Objects/Object-oriented_JS
 
 <p class="summary">Con lo básico fuera del camino, nos enfocaremos en Javascript Orientado a Objetos (JSOO) — este artículo presenta una descripción básica de la teoría de la Programación Orientada a Objetos (POO), luego explora cómo Javascript emula classes de objetos via funciones constructoras, y cómo crea instancias de objetos.</p>
 
-<table class="learn-box standard-table">
+<table class="">
  <tbody>
   <tr>
    <th scope="row">Prerequisitos:</th>
