--- a/files/es/conflicting/web/css/css_fonts/index.html
+++ b/files/es/conflicting/web/css/css_fonts/index.html
@@ -10,20 +10,18 @@ original_slug: Web/HTML/Element/basefont
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>basefont</strong> -<em>fuente base</em> . Permite cambiar algunas propiedades del texto.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;basefont&gt; (solo tiene una).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">desaprobado</a>.
+<dt><strong>basefont</strong> -<em>fuente base</em> . Permite cambiar algunas propiedades del texto.</dt>
+
+<dd><strong>Sus etiquetas son</strong>: &lt;basefont&gt; (solo tiene una).<br><br>
+
  <dl>
+   <dt><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">desaprobado</a>.</dt>
   <dd>En un doctype transicional está definido como un elemento <a href="es/HTML/Elemento/Tipos_de_elementos#especial">especial</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en línea</a>.</dd>
  </dl>
- </dd>
-</dl>
-
-<dl>
- <dd><strong>Crea una caja</strong>: No.</dd>
- <dd><strong>Puede contener</strong>: Nada.</dd>
+ <br><br>
+ <strong>Crea una caja</strong>: No.
+ <strong>Puede contener</strong>: Nada.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
