--- a/files/es/orphaned/web/progressive_web_apps/developer_guide/index.html
+++ b/files/es/orphaned/web/progressive_web_apps/developer_guide/index.html
@@ -23,7 +23,7 @@ original_slug: Web/Progressive_web_apps/Developer_guide
 
 <div class="row topicpage-table">
 <div class="section">
-<h2 class="Basics" id="Web_app_basics">Web app basics</h2>
+<h2 class="" id="Web_app_basics">Web app basics</h2>
 
 <dl>
  <dt>Introduction and getting started with PWA development</dt>
@@ -55,7 +55,7 @@ original_slug: Web/Progressive_web_apps/Developer_guide
 </div>
 
 <div class="section">
-<h2 class="Polishing" id="Polishing_web_apps">Polishing web apps</h2>
+<h2 class="" id="Polishing_web_apps">Polishing web apps</h2>
 
 <dl>
  <dt>Web API equivalents for common native APIs</dt>
@@ -68,7 +68,7 @@ original_slug: Web/Progressive_web_apps/Developer_guide
  <dd>description</dd>
 </dl>
 
-<h2 class="landingPageList" id="Related_topics">Related topics</h2>
+<h2 class="" id="Related_topics">Related topics</h2>
 
 <dl>
  <dt>some topic</dt>
