--- a/files/es/web/css/text-decoration-line/index.html
+++ b/files/es/web/css/text-decoration-line/index.html
@@ -34,9 +34,9 @@ text-decoration-line: unset;
 
 <h3 id="Valores">Valores</h3>
 
-<p><strong><code>none</code></strong></p>
-
 <dl>
+<dt><code>none</code></dt>
+
  <dd>No agrega decoración al texto.</dd>
  <dt><code>underline</code></dt>
  <dd>Cada línea del texto lleva subrayado inferior.</dd>
