--- a/files/es/web/index.html
+++ b/files/es/web/index.html
@@ -15,7 +15,7 @@ translation_of: Web
 
 <div class="row topicpage-table">
 <div class="section">
-<h2 class="Documentation" id="Docs_for_add-on_developers" name="Docs_for_add-on_developers">Documentación para desarrolladores web</h2>
+<h2 class="" id="Docs_for_add-on_developers" name="Docs_for_add-on_developers">Documentación para desarrolladores web</h2>
 
 <dl>
  <dt><a href="/es/docs/Web/Reference">Referencia para desarrolladores web</a></dt>
@@ -33,7 +33,7 @@ translation_of: Web
 </div>
 
 <div class="section">
-<h2 class="Documentation" id="Docs_for_add-on_developers" name="Docs_for_add-on_developers">Referencias de tecnología web</h2>
+<h2 class="" id="Docs_for_add-on_developers" name="Docs_for_add-on_developers">Referencias de tecnología web</h2>
 
 <dl>
  <dt><a href="/es/docs/Web/Reference/API">APIs web</a></dt>
@@ -50,9 +50,7 @@ translation_of: Web
 </div>
 </div>
 
-<dl>
- <dt>Temporal</dt>
-</dl>
+Temporal
 
 <p>Lo siguiente aquí es temporal para ayudarte a realizar un seguimiento de las cosas mientras el trabajo de la organización está en curso. No le hagas caso.</p>
 
