--- a/files/es/web/css/user-select/index.html
+++ b/files/es/web/css/user-select/index.html
@@ -123,7 +123,7 @@ user-select: unset;
 <h2 id="Compatibilidad_con_navegadores">Compatibilidad con navegadores</h2>
 
 <div>
-<div class="hidden">La tabla de compatibilidad de esta página se genera a partir de datos estructurados. Si desea contribuir con los datos, visite<br>
+<div class="">La tabla de compatibilidad de esta página se genera a partir de datos estructurados. Si desea contribuir con los datos, visite<br>
 <a href="https://github.com/mdn/browser-compat-data">https://github.com/mdn/browser-compat-data</a> y envíenos una solicitud.</div>
 
 <p>{{Compat("css.properties.user-select")}}</p>
